init SSH evolution operator

--- a/two_loop_light_walk.ipynb
+++ b/two_loop_light_walk.ipynb
@@ -342,12 +342,12 @@
     "for two $\\theta$ at each $Q$. \n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\vec{X_1} &= \n",
+    "\\vec{X_1} &= \\frac{1}{\\sqrt{1+\\left| \\frac{A_1}{B}  \\right|^2}}\n",
     "\\begin{pmatrix}\n",
     "1 \\\\\n",
     "-\\frac{A_1}{B}\n",
     "\\end{pmatrix} \\\\\n",
-    "\\vec{X_2} &= \n",
+    "\\vec{X_2} &= \\frac{1}{\\sqrt{1+\\left| \\frac{A_2}{B}  \\right|^2}}\n",
     "\\begin{pmatrix}\n",
     "1 \\\\\n",
     "-\\frac{A_2}{B}\n",
@@ -358,7 +358,73 @@
     "\\gamma = i\\int_0^{2\\pi}\\langle X | \\partial_Q | X \\rangle dQ\n",
     "$$\n",
     "\n",
-    "The integral can be solved numerically for given $\\beta_o,\\beta_e$. Achieved values when fixing $\\beta_o=0.25\\pi$ are 0 ($\\beta_e = 0.35\\pi$), $-4\\pi$ ($\\beta_e = 0.15\\pi$). "
+    "The integral can be solved numerically for given $\\beta_o,\\beta_e$. Achieved values when fixing $\\beta_o=0.25\\pi$ are 0 ($\\beta_e = 0.35\\pi$), $-\\pi$ ($\\beta_e = 0.15\\pi$). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Effective Hamiltonian of the SSH lattice\n",
+    "Here we try to analyze the Floquet SSH lattice in the framework of discrete-time quantum walk. We first define some notations:\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\mathrm{Spin}:& \\\\\n",
+    "a: \\left| \\uparrow \\right\\rangle &= \\left| 0 \\right\\rangle = \\begin{pmatrix}\n",
+    "1\\\\0 \\end{pmatrix} \\\\\n",
+    "\n",
+    "b: \\left| \\downarrow \\right\\rangle &= \\left| 1 \\right\\rangle = \\begin{pmatrix}\n",
+    "0\\\\1 \\end{pmatrix} \\\\\n",
+    "\n",
+    "\\mathrm{Pauli\\; matrices}:& \\\\\n",
+    " \\sigma_x &= \\begin{pmatrix}0 & 1 \\\\ 1 & 0 \\end{pmatrix} \\\\\n",
+    " \\sigma_y &= \\begin{pmatrix}0 & -i \\\\ i & 0 \\end{pmatrix} \\\\\n",
+    " \\sigma_z &= \\begin{pmatrix}1 & 0 \\\\ 0 & -1 \\end{pmatrix} \\\\\n",
+    " I &= \\begin{pmatrix}1 & 0 \\\\ 0 & 1 \\end{pmatrix} \\\\\n",
+    "\n",
+    "\\mathrm{Rotation\\; operator}: \\\\\n",
+    "R(\\beta) &= e^{i\\beta \\sigma_x} = \\begin{pmatrix} \\cos(\\beta) & i\\sin(\\beta) \\\\ i\\sin(\\beta) & \\cos(\\beta) \\end{pmatrix} \\\\\n",
+    "\n",
+    "\\end{aligned}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The discrete-time quantum walk for a 2-spin particle is achieved by a rotation operator followed by a spin-dependent translation operator. For a finite, periodic lattice with $N$ sites, the translation operator is defined as\n",
+    "$$\n",
+    "T = \\sum_{x=1}^{N} \\left| x+1 \\right\\rangle \\left\\langle x \\right|\\otimes \\left| \\uparrow \\right\\rangle \\left\\langle \\uparrow \\right|  + \\left| x-1 \\right\\rangle \\left\\langle x \\right|\\otimes \\left| \\downarrow \\right\\rangle \\left\\langle \\downarrow \\right|\n",
+    "$$\n",
+    "It can be verified that the evolution operator on the Floquet SSH lattice is\n",
+    "$$\n",
+    "U = TR(\\beta_e)TR(\\beta_o)\n",
+    "$$\n",
+    "Note that $U$ is $N/2 \\times N/2$ dimension instead of $N \\times N$ because only the odd sites can be taken for the input state and states after applying $U$. By transforming the position basis to the momentum basis, the evolution operator can be written as\n",
+    "$$\n",
+    "U = \\sum_{k} \\left| k \\right\\rangle \\left\\langle k \\right| \\otimes U_k,\\; \n",
+    "\\mathrm{where}\\; k = \\frac{2\\pi l}{N/2},\\; l = 1,2,...,N/2\n",
+    "$$\n",
+    "where $\\left| k \\right\\rangle = \\frac{1}{\\sqrt{N/2}}\\sum_{n=1}^{N/2}e^{ikn}\\left| 2n-1 \\right\\rangle$ is the Fourier-transformed state and $U_k$ is the $2\\times 2$ matrix acting on the spin state:\n",
+    "$$\n",
+    "U_k = \\begin{pmatrix}\\scriptstyle \\cos(\\beta_e)\\cos(\\beta_o)e^{-ik} -\\sin(\\beta_e)\\sin(\\beta_o) & \\scriptstyle \n",
+    "i\\cos(\\beta_e)\\sin(\\beta_o)e^{-ik} + i\\sin(\\beta_e)\\cos(\\beta_o) \\\\ \\scriptstyle \n",
+    "i\\cos(\\beta_e)\\sin(\\beta_o)e^{ik} + i\\sin(\\beta_e)\\cos(\\beta_o) & \\scriptstyle  \n",
+    "\\cos(\\beta_e)\\cos(\\beta_o)e^{ik} -\\sin(\\beta_e)\\sin(\\beta_o) \\end{pmatrix}\n",
+    "$$\n",
+    "The Floquet theorem states that: \n",
+    "$$\n",
+    "U_k \\left| \\psi_{k,E} \\right\\rangle = e^{-iE} \\left| \\psi_{k,E} \\right\\rangle\n",
+    "$$\n",
+    "This is equivalent to the ABCD matrix that we have derived before. The $k,E$ here correspond to $Q, -\\theta$. The dispersion relation can be obtained in the same way. \n",
+    "$$\n",
+    "\\cos(E) =\\cos(\\beta_e)\\cos(\\beta_o)\\cos(k)-\\sin(\\beta_e)\\sin(\\beta_o)\n",
+    "$$\n",
+    "The evolution operator is characterized by a rotation around an axis in the Bloch sphere and can be decomposed into the superposition of the Pauli matrices:\n",
+    "$$\n",
+    "U_k = R_n(\\alpha) = e^{-i\\frac{\\alpha}{2}\\vec n \\cdot \\vec \\sigma} = \\cos(\\frac{\\alpha}{2})I -i \\sin(\\frac{\\alpha}{2}) \\vec n \\cdot \\vec \\sigma\n",
+    "$$"
    ]
   },
   {
