topological invariants: writing derivations

--- a/two_loop_light_walk.ipynb
+++ b/two_loop_light_walk.ipynb
@@ -632,7 +632,86 @@
     "  0,\\; & \\frac{3T}{4} \\le t < T\n",
     "\\end{aligned} \\right.\n",
     "$$\n",
-    "Remember that $T=1$, $v = \\pi - 2\\beta_o$ and $w = \\pi - 2\\beta_e$."
+    "Remember that $T=1$, $v = \\pi - 2\\beta_o$ and $w = \\pi - 2\\beta_e$. \n",
+    "\n",
+    "As a general rule, the action of a time-independent Hamiltonian on a 2 level system is rotating the Bloch vector around an axis. A rotation in the Bloch sphere is characterized by\n",
+    "$$\n",
+    "R_n(\\alpha) = e^{-i\\frac{\\alpha}{2}\\vec n \\cdot \\vec \\sigma} = \\cos(\\frac{\\alpha}{2})I -i \\sin(\\frac{\\alpha}{2}) \\vec n \\cdot \\vec \\sigma\n",
+    "$$\n",
+    "where $\\vec n$ is the axis and $\\alpha$ is the angle of rotation (use right-hand rule).\n",
+    "\n",
+    "The Hamiltonian $H(k,t)$ can be decomposed with the Pauli matrices. During the time when $v$ is activated, we have\n",
+    "$$\n",
+    "H(k,t) = \\begin{pmatrix} 0 & v \\\\ v & 0 \\end{pmatrix} = v\\sigma_x\n",
+    "$$\n",
+    "and during the time when $w$ is activated, we have\n",
+    "$$\n",
+    "H(k,t) = \\begin{pmatrix} 0 & w e^{-ik} \\\\ w e^{ik} & 0 \\end{pmatrix} = w\\cos(k)\\sigma_x + w\\sin(k)\\sigma_y\n",
+    "$$\n",
+    "and for a time-independent Hamiltonian, the evolution operator is \n",
+    "$$\n",
+    "U(t) = e^{-iHt}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's start to construct the topological invariants from the Bloch Hamiltonian $H(k,t)$. The time evolution operator is \n",
+    "$$\n",
+    "U(k,t) = \\cal{T} e^{-i\\int_0^t H(k,t')dt'}\n",
+    "$$\n",
+    "For our case, the $H(k,t)$ is piece-wise constant, so the integration can be easily calculated just by dividing the time into intervals. The full-period time evolution operator is \n",
+    "$$\\begin{aligned}\n",
+    "U(k,t=1) &= e^{-i\\frac{1}{4}v\\sigma_x}e^{-i\\frac{1}{2}(w\\cos(k)\\sigma_x + w\\sin(k)\\sigma_y)}e^{-i\\frac{1}{4}v\\sigma_x}\\\\\n",
+    "&= \\left[\\cos(\\frac{v}{2})\\cos(\\frac{w}{2})-\\sin(\\frac{v}{2})\\sin(\\frac{w}{2})\\cos(k)\\right]I \\\\\n",
+    "&\\, -i\\left[\\sin(\\frac{v}{2})\\cos(\\frac{w}{2})+\\cos(\\frac{v}{2})\\sin(\\frac{w}{2})\\cos(k)\\right]\\sigma_x \\\\\n",
+    "&\\, -i\\sin(\\frac{w}{2})\\sin(k)\\sigma_y \\\\\n",
+    "&= \\lambda_1(k)\\left| \\psi_1(k) \\right\\rangle \\left\\langle \\psi_1(k) \\right| + \\lambda_2(k)\\left| \\psi_2(k) \\right\\rangle \\left\\langle \\psi_2(k) \\right|\n",
+    "\\end{aligned}$$\n",
+    "where\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\lambda_1(k) &= sfaasfdasefaf \\\\\n",
+    "\\lambda_2(k) &= asfasfawefasfas \\\\\n",
+    "\\left| \\psi_1(k) \\right\\rangle &= \\begin{pmatrix} saf \\\\ asdf \\end{pmatrix} \\\\\n",
+    "\\left| \\psi_2(k) \\right\\rangle &= \\begin{pmatrix} asdf \\\\ fasf \\end{pmatrix}\n",
+    "\\end{aligned}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's analyze the symmetry of the Hamiltonian.\n",
+    "\n",
+    "The chiral symmetry is defined by\n",
+    "$$\n",
+    "S^{-1}H(k,t)S = -H(k,-t)\n",
+    "$$\n",
+    "where $S$ is a unitary matrix. We can check that for our system \n",
+    "$$\n",
+    "S = \\sigma_z\n",
+    "$$\n",
+    "During the period $0\\le t < \\frac{1}{4} $ and $\\frac{3}{4} \\le t < 1$ when $v$ is activated, we have\n",
+    "$$\\begin{aligned}\n",
+    "S^{-1}H(k,t)S &= \\begin{pmatrix} 1 & 0 \\\\ 0 & -1 \\end{pmatrix} \\begin{pmatrix} 0 & v \\\\ v & 0 \\end{pmatrix} \\begin{pmatrix} 1 & 0 \\\\ 0 & -1 \\end{pmatrix} \\\\\n",
+    "&= -\\begin{pmatrix} 0 & v \\\\ v & 0 \\end{pmatrix} = -H(k,-t)\n",
+    "\\end{aligned}$$\n",
+    "During the period $\\frac{1}{4}\\le t < \\frac{3}{4} $ when $w$ is activated, we have\n",
+    "$$\\begin{aligned}\n",
+    "S^{-1}H(k,t)S &= \\begin{pmatrix} 1 & 0 \\\\ 0 & -1 \\end{pmatrix} \\begin{pmatrix} 0 & we^{-ik} \\\\ we^{ik} & 0 \\end{pmatrix} \\begin{pmatrix} 1 & 0 \\\\ 0 & -1 \\end{pmatrix} \\\\\n",
+    "&= -\\begin{pmatrix} 0 & we^{-ik} \\\\ we^{ik} & 0 \\end{pmatrix} = -H(k,-t)\n",
+    "\\end{aligned}$$\n",
+    "Notice that $H(k,t)=H(k,-t)$ due to our choice of the time origin. \n",
+    "\n",
+    "For the particle-hole symmetry and the time-reversal symmetry, we check $C=\\sigma_z$ and $T=I$, respectively, they should satisfy\n",
+    "$$\\begin{aligned}\n",
+    "C^{-1}H(k,t)C &= -H^{\\ast}(-k,t) \\\\\n",
+    "T^{-1}H(k,t)T &= H^{\\ast}(-k,-t)\n",
+    "\\end{aligned}$$\n"
    ]
   },
   {
