topological invariants: complete phase diagram

--- a/two_loop_light_walk.ipynb
+++ b/two_loop_light_walk.ipynb
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -806,11 +806,49 @@
     "So $\\sigma_z \\lvert \\psi_n \\rangle $ is also an eigenvector with eigenvalue $-E_n(k)+2\\pi$. Due to the periodicity of the quasienergy, the dispersion relation is symmetric around $E = q\\pi$ in which $q$ is an integer. As a result, the bandgap will only close at these quasienergy values.\n",
     "\n",
     "\n",
-    "For the particle-hole symmetry and the time-reversal symmetry, we check $C=\\sigma_z$ and $T=I$, respectively, they should satisfy\n",
+    "For the particle-hole symmetry and the time-reversal symmetry, we check $C=\\sigma_z$ and $T=I$, respectively, they should satisfy (Is the $H^\\ast$ complex conjugate or complex conjugate plus transpose???)\n",
     "$$\\begin{aligned}\n",
     "C^{-1}H(k,t)C &= -H^{\\ast}(-k,t) \\\\\n",
     "T^{-1}H(k,t)T &= H^{\\ast}(-k,-t)\n",
     "\\end{aligned}$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The topological invariants are affiliated with the gap quasienergy. It is defined as the winding number of the component of the periodized time evolution operator at $t=\\frac{T}{2}$ (see ref for details). The periodized time evolution operator is\n",
+    "$$\n",
+    "U_{\\epsilon}(k,t) = U(k,t)e^{iH_{\\epsilon}^{\\mathrm{eff}}(k)t}\n",
+    "$$\n",
+    "where $H_{\\epsilon}^{\\mathrm{eff}}(k)$ is the effective Hamiltonian, derived from the full-period time evolution operator $U(k,t=T)$. We also need to calculate the evolution operator at $t=\\frac{1}{2}$, which is\n",
+    "$$\\begin{aligned}\n",
+    "U(k,t=\\frac{1}{2}) &= e^{-i\\frac{1}{4}(w\\cos(k)\\sigma_x + w\\sin(k)\\sigma_y)}e^{-i\\frac{1}{4}v\\sigma_x}\\\\\n",
+    "&= \\left[\\cos(\\frac{v}{4})\\cos(\\frac{w}{4})-\\sin(\\frac{v}{4})\\sin(\\frac{w}{4})\\cos(k)\\right]I \\\\\n",
+    "&\\, -i\\left[\\sin(\\frac{v}{4})\\cos(\\frac{w}{4})+\\cos(\\frac{v}{4})\\sin(\\frac{w}{4})\\cos(k)\\right]\\sigma_x \\\\\n",
+    "&\\, -i\\cos(\\frac{v}{4})\\sin(\\frac{w}{4})\\sin(k)\\sigma_y \\\\\n",
+    "&\\, +i\\sin(\\frac{v}{4})\\sin(\\frac{w}{4})\\sin(k)\\sigma_z \n",
+    "\\end{aligned}$$\n",
+    "Finally, the invariants are calculated numerically using the equation for AIII class (chiral class) after specifying $v,w$ in the phase diagram. Before showing the complete phase diagram with the topological invariants $\\Z\\times \\Z$, let's plot the $U_\\epsilon^{+}(k)$ for different $v,w$. Its winding number around the origin gives the topological invariant. The arrows in the figures show the direction of the trajectory at $k=0$ when $k$ changing from $0$ to $2\\pi$.\n",
+    "\n",
+    "For $v=0.2\\pi,w=1.2\\pi$:\n",
+    "<img src=\"v0.2w1.2.png\" width=\"82%\"/>\n",
+    "\n",
+    "For $v=0.7\\pi,w=1.7\\pi$:\n",
+    "<img src=\"v0.7w1.7.png\" width=\"82%\"/>\n",
+    "\n",
+    "For $v=1.8\\pi,w=0.9\\pi$:\n",
+    "<img src=\"v1.8w0.9.png\" width=\"82%\"/>\n",
+    "\n",
+    "For $v=0.9\\pi,w=0.3\\pi$:\n",
+    "<img src=\"v0.9w0.3.png\" width=\"82%\"/>\n",
+    "\n",
+    "We label each phase with its topological invariants $(Q_0,Q_\\pi)$:\n",
+    "<img src=\"phase diagram.png\" width=\"82%\"/>\n",
+    "\n",
+    "It's clear that the closing of the bandgap leads to change of the topological invariant affiliated with that gap. There are 4 phases in total.\n",
+    "\n",
+    "Next: see the edge state in the simulation of two phases with distinct topological invariants. "
    ]
   },
   {
